[package]
name = "jisho-cli"
description = "A very simple cli tool to lookup Japanese words using jisho.org"
version = "0.1.3"
authors = ["jojii <jojii@gmx.net>"]
readme = "README.md"
repository = "https://github.com/JojiiOfficial/jisho-cli"
license = "GPL-3.0"
edition = "2018"

[dependencies]
ureq = { version = "2.0.1", features = ["json"] }
serde_json = "1.0.62"
ansi_term = "0.12.1"
colored = "2.0.0"
