[package]
name = "jisho-cli"
description = "A very simple cli tool to lookup Japanese words using jisho.org"
version = "0.1.4"
authors = ["jojii <jojii@gmx.net>"]
readme = "README.md"
repository = "https://github.com/JojiiOfficial/jisho-cli"
license = "GPL-3.0"
edition = "2018"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.45.0", features = ["Win32_Foundation", "Win32_System_Console"] }

[dependencies]
ureq = { version = "2.1.0", features = ["json"] }
libc = "0.2.139"
serde_json = "1.0.64"
ansi_term = "0.12.1"
colored = "2.0.0"
argparse = "0.2.2"
webbrowser = "0.5.5"
atty = "0.2"

[features]
